feat: 实现用户认证功能，包括登录、注册和发送验证码接口

--- a/SourceCode/backend/pom.xml
+++ b/SourceCode/backend/pom.xml
@@ -52,6 +52,8 @@
             <version>5.8.25</version>
         </dependency>
         
+        <!-- JWT (Hutool includes JWT support) -->
+        
         <!-- Validation -->
          <dependency>
             <groupId>org.springframework.boot</groupId>
