--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.trae
 Introduction.md
 *.class
+SourceCode/backend/src/main/resources/application.yml
+SourceCode/backend/target/classes/application.yml
+/SourceCode/backend/target
